# Transformers4MPP_review

./: .gitignore  README.md  main.py  pyproject.toml  reproduce_figures.ipynb
data/: README.md
data/multi_task_data/: clintox_pos_pct.csv  sider_pos_pct.csv  tox21_pos_pct.csv
data/num_parameters/: calculated_params.csv  info_extracted_from_provided_code.csv  transformer_models_shape.csv
data/objectives/: k-bert.csv  mat.csv  molbert.csv
data/performance_comparison/: dl_classification.csv  dl_regression.csv  ml_classification.csv  ml_regression.csv  transformers_classification.csv  transformers_regression.csv
data/pretrain_dataset_size/: chemBERTa-2.csv  molformer_classification.csv  molformer_qm9.csv  molformer_regression.csv
data/representation/: mat.csv  mol-bert.csv
scripts/: calc_num_parameters.py  calc_positive_pct_per_task.py  plot_performances.py  utils.py
