[tool.poetry]
name = "transformers4mpp-review"
version = "0.1.0"
description = "Reproducibility code for the tranformer for MPP review"
authors = ["Afnan Sultan <s8afsult@uni-saarland.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
